infrastructure/kube/keep-test/tbtc-dapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tbtc-dapp-http
  namespace: tbtc
  labels:
    app: tbtc
    type: dapp
spec:
  type: NodePort
  ports:
  - name: tbtc-dapp-http-port
    port: 80
    targetPort: 80
  selector:
    app: tbtc
    type: dapp
